Revert "DT-1645 fixes basket quantity button wrapping at mobile"
This reverts commit 45d49d307786fc652bd05d887e4b0cf992cea468.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1548,9 +1548,6 @@ select::-ms-expand {
       .basket-summary-quantity {
         margin-top: 4px;
       }
-      .basket-summary-quantitybtn {
-        min-width: 90px;
-      }
       .basket-summary-quantity, .basket-summary-quantitybtn {
         display: inline-block;
         label {
